Fixed menu spacing.

--- a/css/global.css
+++ b/css/global.css
@@ -649,8 +649,9 @@ ul.global-menu li ul.dropdown {
   display: none;
   position: absolute;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   z-index: 1;
+  left: -10px;
 }
 ul.global-menu li ul.dropdown li {
   display: inline-block;
