--- a/scss/_kafka-summit.scss
+++ b/scss/_kafka-summit.scss
@@ -485,8 +485,9 @@ ul.global-menu {
 			display: none;
 			position: absolute;
 			padding:0;
-			margin: 0;
+			margin: 0 auto;
 			z-index: 1;
+			left: -10px;
 			li {
 				display: inline-block;
 				padding: 0;
